fine-tuned Adjectives

--- a/french/pages/vocabulary/exercise_adjectives.html
+++ b/french/pages/vocabulary/exercise_adjectives.html
@@ -262,69 +262,72 @@
                 </li>
 
                 <li>
-                    <section class="span-half">
+                    <section>
                         <h4>Faites l’exercice selon le modèle.</h4>
 
-                        <ol>
-                            <li>
-                                <span>Hector (chat, animal / petit, très doux)</span>
-                                <span>Hector est un petit chat, mais un animal très doux.</span>
-                            </li>
+                        <div class="example">
+                            <div>
+                                Exemples :
+                            </div>
+                            <div>
+                                <span class="whitespace"></span>Hector (chat, animal / petit, très doux)
+                            </div>
+                            <div>
+                                <span class="whitespace"></span>Hector est un petit chat, mais un animal très doux.
+                            </div>
+                        </div>
 
+                        <ol class="input-sentence-width">
                             <li>
                                 <span title="Tom Cruise est un grand acteur, mais un petit homme.">Tom Cruise (acteur,
                                     homme / grand, petit)</span>
-                                <span><input type="text"
-                                        pattern="Tom Cruise est un grand acteur, mais un petit homme[.]?"></span>
+                                <input type="text" pattern="Tom Cruise est un grand acteur, mais un petit homme[.]?">
                             </li>
 
                             <li>
                                 <span title="Justin est un garçon bruyant, mais un écolier studieux.">Justin (garçon,
                                     écolier / bruyant, studie)</span>
-                                <span><input type="text"
-                                        pattern="Justin est un garçon bruyant, mais un écolier studieux[.]?"></span>
+                                <input type="text" pattern="Justin est un garçon bruyant, mais un écolier studieux[.]?">
                             </li>
 
                             <li>
                                 <span title="Claudine est une femme seule, mais une collègue intéressante.">Claudine
                                     (femme, collègue / seule, intéressante)</span>
-                                <span><input type="text"
-                                        pattern="Claudine est une femme seule, mais une collègue intéressante[.]?"></span>
+                                <input type="text"
+                                    pattern="Claudine est une femme seule, mais une collègue intéressante[.]?">
                             </li>
 
                             <li>
                                 <span title="Le frère de Mélisa est un bon frère, mais un mauvais géographe.">Le frère
                                     de Mélisa (frère, géographe / bon, mauvais)</span>
-                                <span><input type="text"
-                                        pattern="Le frère de Mélisa est un bon frère, mais un mauvais géographe[.]?"></span>
+                                <input type="text"
+                                    pattern="Le frère de Mélisa est un bon frère, mais un mauvais géographe[.]?">
                             </li>
 
                             <li>
                                 <span title="Julie est une belle fille, mais une mauvaise danseuse.">Julie (fille,
                                     danseuse / belle, mauvaise)</span>
-                                <span><input type="text"
-                                        pattern="Julie est une belle fille, mais une mauvaise danseuse[.]?"></span>
+                                <input type="text" pattern="Julie est une belle fille, mais une mauvaise danseuse[.]?">
                             </li>
 
                             <li>
                                 <span title="M. Lévesque est un maire respecté, mais un ancien marin.">Monsieur Lévesque
                                     (maire, marin / respecté, ancien)</span>
-                                <span><input type="text"
-                                        pattern="Monsieur Lévesque est un maire respecté, mais un ancien marin[.]?"></span>
+                                <input type="text"
+                                    pattern="Monsieur Lévesque est un maire respecté, mais un ancien marin[.]?">
                             </li>
 
                             <li>
                                 <span title="Madame Lise est une voisine réservée, mais une femme curieuse.">Madame Lise
                                     (voisine, femme / réservée, curieuse)</span>
-                                <span><input type="text"
-                                        pattern="Madame Lise est une voisine réservée, mais une femme curieuse[.]?"></span>
+                                <input type="text"
+                                    pattern="Madame Lise est une voisine réservée, mais une femme curieuse[.]?">
                             </li>
 
                             <li>
                                 <span title="Finette est une chienne rousse, mais un vieil animal.">Finette (chienne,
                                     animal / rousse, vieil)</span>
-                                <span><input type="text"
-                                        pattern="Finette est une chienne rousse, mais un vieil animal[.]?"></span>
+                                <input type="text" pattern="Finette est une chienne rousse, mais un vieil animal[.]?">
                             </li>
                         </ol>
                     </section>
