--- a/french/pages/exercise_concordance_conditional.html
+++ b/french/pages/exercise_concordance_conditional.html
@@ -52,9 +52,7 @@
                         <ol class="input-sentence-width">
                             <li>
                                 <span title="Mais, demain soir, s'ils ne travaillent pas, ils iront au cinéma.">Ce soir,
-                                    ils
-                                    ne
-                                    vont pas au cinéma parce qu’ils travaillent.</span>
+                                    ils ne vont pas au cinéma parce qu’ils travaillent.</span>
                                 <input type="text"
                                     pattern="Mais, demain soir, s'ils ne travaillent pas, ils iront au cinéma[.]?">
                             </li>
