fine-tuning Adjectives

--- a/french/pages/vocabulary/exercise_adjectives.html
+++ b/french/pages/vocabulary/exercise_adjectives.html
@@ -286,7 +286,7 @@
 
                             <li>
                                 <span title="Justin est un garçon bruyant, mais un écolier studieux.">Justin (garçon,
-                                    écolier / bruyant, studie)</span>
+                                    écolier / bruyant, studieux)</span>
                                 <input type="text" pattern="Justin est un garçon bruyant, mais un écolier studieux[.]?">
                             </li>
 
@@ -311,8 +311,8 @@
                             </li>
 
                             <li>
-                                <span title="M. Lévesque est un maire respecté, mais un ancien marin.">Monsieur Lévesque
-                                    (maire, marin / respecté, ancien)</span>
+                                <span title="Monsieur Lévesque est un maire respecté, mais un ancien marin.">Monsieur
+                                    Lévesque (maire, marin / respecté, ancien)</span>
                                 <input type="text"
                                     pattern="Monsieur Lévesque est un maire respecté, mais un ancien marin[.]?">
                             </li>
