added text exercise for Gender and Plural Noun

--- a/french/index.html
+++ b/french/index.html
@@ -312,6 +312,13 @@
 
   <div class="card">
     <span class="cefr">A2</span>
+    <header>Le genre et le nombre des noms communs</header>
+    <a class="theory">théorie</a>
+    <a href="pages/vocabulary/exercise_genre1.html">exercice de texte</a>
+  </div>
+
+  <div class="card">
+    <span class="cefr">A2</span>
     <header>La place de l’adjectif</header>
     <a class="theory">théorie</a>
     <a href="pages/vocabulary/exercise_adjectives.html">exercice de texte</a>
