added text exercises for Gender and Number for nouns

--- a/french/index.html
+++ b/french/index.html
@@ -312,9 +312,16 @@
 
   <div class="card">
     <span class="cefr">A2</span>
-    <header>Le genre et le nombre des noms communs</header>
+    <header>Le genre des noms communs</header>
     <a class="theory">théorie</a>
-    <a href="pages/vocabulary/exercise_genre1.html">exercice de texte</a>
+    <a href="pages/vocabulary/exercise_genre.html">exercice de texte</a>
+  </div>
+
+  <div class="card">
+    <span class="cefr">A2</span>
+    <header>Le nombre des noms communs</header>
+    <a class="theory">théorie</a>
+    <a href="pages/vocabulary/exercise_nombre.html">exercice de texte</a>
   </div>
 
   <div class="card">
