added Gender and Number of nouns to Stats page

--- a/french/pages/vocabulary/exercise_nombre.html
+++ b/french/pages/vocabulary/exercise_nombre.html
@@ -24,7 +24,7 @@
 <body>
     <main spellcheck="false">
         <article class="text">
-            <h2>Le genre et le nombre des noms communs</h2>
+            <h2>Le nombre des noms communs</h2>
             <h3>Exercices et corrigé</h3>
 
             <ol class="nested">
