--- a/french/pages/stats.html
+++ b/french/pages/stats.html
@@ -83,15 +83,16 @@
                     <tr>
                         <th data-key="date" rowspan="3">date</th>
                         <th class="duration" rowspan="3">durée <br /><br />(heure:) min: sec</th>
-                        <th data-key="A1" class="A1 conjugations conjugations-plus others" colspan="10">A1</th>
-                        <th data-key="A2" class="A2 conjugations conjugations-plus others tense-sequence vocabulary" colspan="15">
-                            A2</th>
+                        <th data-key="A1" class="A1 conjugations conjugations-plus others" colspan="11">A1</th>
+                        <th data-key="A2" class="A2 conjugations conjugations-plus others tense-sequence vocabulary"
+                            colspan="16">A2</th>
                         <th data-key="B1" class="B1 conjugations tense-sequence others vocabulary" colspan="15">B1</th>
                         <th data-key="B2" class="B2 conjugations conjugations-plus tense-sequence others" colspan="12">
                             B2</th>
                     </tr>
                     <tr>
                         <!-- A1 -->
+                        <th data-key="exercise_nombre.html" class="A1 vocabulary" colspan="1">nombre des noms</th>
                         <th data-key="exercise_present.html conjugations.html?Le%20pr%C3%A9sent" class="A1 conjugations"
                             colspan="2">présent</th>
                         <th data-key="exercise_devoir_pouvoir_falloir_vouloir.html" class="A1 conjugations-plus"
@@ -107,6 +108,7 @@
                         </th>
 
                         <!-- A2 -->
+                        <th data-key="exercise_genre.html" class="A2 vocabulary" colspan="1">Genre des noms</th>
                         <th data-key="exercise_avoir_etre.html" class="A2 conjugations-plus" colspan="1">Avoir ou Être
                         </th>
                         <th data-key="exercise_adjectives.html" class="A2 vocabulary" colspan="1">adjectif</th>
@@ -146,7 +148,8 @@
                         <th data-key="exercise_savoir_connaitre.html" class="B1 vocabulary" colspan="1">Savoir<br /> ou
                             Connaître
                         </th>
-                        <th data-key="exercise_amener_emmener.html" class="B1 vocabulary" colspan="1">Apporter, Emporter,
+                        <th data-key="exercise_amener_emmener.html" class="B1 vocabulary" colspan="1">Apporter,
+                            Emporter,
                             Amener, Emmener</th>
                         <th data-key="exercise_presentsubjunctive.html conjugations.html?Le%20subjonctif%20pr%C3%A9sent"
                             class="B1 conjugations" colspan="2">subjonctif présent</th>
@@ -171,6 +174,8 @@
                     </tr>
                     <tr>
                         <!-- A1 -->
+                        <th class="A1 vocabulary"><a href="vocabulary/exercise_nombre.html">texte</a></th>
+
                         <!-- présent -->
                         <th class="A1 conjugations"><a href="conjugations.html?Le%20pr%C3%A9sent">liste</a></th>
                         <th class="A1 conjugations"><a href="exercise_present.html">texte</a></th>
@@ -193,6 +198,7 @@
                         <th class="A1 others"><a href="exercise_qui_quel_quelle.html">texte</a></th>
 
                         <!-- A2 -->
+                        <th class="A2 vocabulary"><a href="vocabulary/exercise_genre.html">texte</a></th>
                         <th class="A2 conjugations-plus"><a href="exercise_avoir_etre.html">texte</a></th>
                         <th class="A2 vocabulary"><a href="vocabulary/exercise_adjectives.html">texte</a></th>
                         <th class="A2 vocabulary"><a href="vocabulary/exercise_il_est.html">texte</a></th>
@@ -280,6 +286,8 @@
                             <td class="duration" data-key="duration"></td>
 
                             <!-- A1 -->
+                            <td class="A1 vocabulary" data-key="exercise_nombre.html"></td>
+
                             <td class="A1 conjugations" data-key="conjugations.html?Le%20pr%C3%A9sent"></td>
                             <td class="A1 conjugations" data-key="exercise_present.html"></td>
 
@@ -297,6 +305,7 @@
                             <td class="A1 others" data-key="exercise_qui_quel_quelle.html"></td>
 
                             <!-- A2 -->
+                            <td class="A2 vocabulary" data-key="exercise_genre.html"></td>
                             <td class="A2 conjugations-plus" data-key="exercise_avoir_etre.html"></td>
                             <td class="A2 vocabulary" data-key="exercise_adjectives.html"></td>
                             <td class="A2 vocabulary" data-key="exercise_il_est.html"></td>
