fine-tuned Gender and Number for nouns

--- a/french/pages/stats.html
+++ b/french/pages/stats.html
@@ -92,7 +92,7 @@
                     </tr>
                     <tr>
                         <!-- A1 -->
-                        <th data-key="exercise_nombre.html" class="A1 vocabulary" colspan="1">nombre des noms</th>
+                        <th data-key="exercise_number.html" class="A1 vocabulary" colspan="1">nombre des noms</th>
                         <th data-key="exercise_present.html conjugations.html?Le%20pr%C3%A9sent" class="A1 conjugations"
                             colspan="2">présent</th>
                         <th data-key="exercise_devoir_pouvoir_falloir_vouloir.html" class="A1 conjugations-plus"
@@ -108,7 +108,7 @@
                         </th>
 
                         <!-- A2 -->
-                        <th data-key="exercise_genre.html" class="A2 vocabulary" colspan="1">Genre des noms</th>
+                        <th data-key="exercise_gender.html" class="A2 vocabulary" colspan="1">Genre des noms</th>
                         <th data-key="exercise_avoir_etre.html" class="A2 conjugations-plus" colspan="1">Avoir ou Être
                         </th>
                         <th data-key="exercise_adjectives.html" class="A2 vocabulary" colspan="1">adjectif</th>
@@ -174,7 +174,7 @@
                     </tr>
                     <tr>
                         <!-- A1 -->
-                        <th class="A1 vocabulary"><a href="vocabulary/exercise_nombre.html">texte</a></th>
+                        <th class="A1 vocabulary"><a href="vocabulary/exercise_number.html">texte</a></th>
 
                         <!-- présent -->
                         <th class="A1 conjugations"><a href="conjugations.html?Le%20pr%C3%A9sent">liste</a></th>
@@ -198,7 +198,7 @@
                         <th class="A1 others"><a href="exercise_qui_quel_quelle.html">texte</a></th>
 
                         <!-- A2 -->
-                        <th class="A2 vocabulary"><a href="vocabulary/exercise_genre.html">texte</a></th>
+                        <th class="A2 vocabulary"><a href="vocabulary/exercise_gender.html">texte</a></th>
                         <th class="A2 conjugations-plus"><a href="exercise_avoir_etre.html">texte</a></th>
                         <th class="A2 vocabulary"><a href="vocabulary/exercise_adjectives.html">texte</a></th>
                         <th class="A2 vocabulary"><a href="vocabulary/exercise_il_est.html">texte</a></th>
@@ -286,7 +286,7 @@
                             <td class="duration" data-key="duration"></td>
 
                             <!-- A1 -->
-                            <td class="A1 vocabulary" data-key="exercise_nombre.html"></td>
+                            <td class="A1 vocabulary" data-key="exercise_number.html"></td>
 
                             <td class="A1 conjugations" data-key="conjugations.html?Le%20pr%C3%A9sent"></td>
                             <td class="A1 conjugations" data-key="exercise_present.html"></td>
@@ -305,7 +305,7 @@
                             <td class="A1 others" data-key="exercise_qui_quel_quelle.html"></td>
 
                             <!-- A2 -->
-                            <td class="A2 vocabulary" data-key="exercise_genre.html"></td>
+                            <td class="A2 vocabulary" data-key="exercise_gender.html"></td>
                             <td class="A2 conjugations-plus" data-key="exercise_avoir_etre.html"></td>
                             <td class="A2 vocabulary" data-key="exercise_adjectives.html"></td>
                             <td class="A2 vocabulary" data-key="exercise_il_est.html"></td>
