fine-tuned Il-est

--- a/french/pages/vocabulary/exercise_il_est.html
+++ b/french/pages/vocabulary/exercise_il_est.html
@@ -157,7 +157,20 @@
                             <li>
                                 Il pleut.
                                 <input type="text" pattern="Il est">
-                                <b title="Il est">nécessaire</b> de prendre votre parapluie.
+                                <b title="Il est
+Ici, 'il est' est une construction impersonnelle neutre.
+On exprime :
+- une nécessité
+- une obligation
+- une règle générale
+
+Structure très fréquente :
+- Il est important de…
+- Il est nécessaire de…
+- Il est interdit de…
+- Il est obligatoire de…
+
+C’est plus formel, plus neutre.">nécessaire</b> de prendre votre parapluie.
                             </li>
 
                             <li>
