added text exercise for Adjective Gender

--- a/french/index.html
+++ b/french/index.html
@@ -333,6 +333,13 @@
 
   <div class="card">
     <span class="cefr">A2</span>
+    <header>L’accord des adjectifs en genre</header>
+    <a class="theory">théorie</a>
+    <a href="pages/vocabulary/exercise_adjective_gender.html">exercice de texte</a>
+  </div>
+
+  <div class="card">
+    <span class="cefr">A2</span>
     <header>Il est, c'est</header>
     <a class="theory">théorie</a>
     <a href="pages/vocabulary/exercise_il_est.html">exercice de texte</a>
