added Adjective Gender to Stats page

--- a/french/pages/stats.html
+++ b/french/pages/stats.html
@@ -85,7 +85,7 @@
                         <th class="duration" rowspan="3">durée <br /><br />(heure:) min: sec</th>
                         <th data-key="A1" class="A1 conjugations conjugations-plus others" colspan="11">A1</th>
                         <th data-key="A2" class="A2 conjugations conjugations-plus others tense-sequence vocabulary"
-                            colspan="16">A2</th>
+                            colspan="17">A2</th>
                         <th data-key="B1" class="B1 conjugations tense-sequence others vocabulary" colspan="15">B1</th>
                         <th data-key="B2" class="B2 conjugations conjugations-plus tense-sequence others" colspan="12">
                             B2</th>
@@ -108,10 +108,13 @@
                         </th>
 
                         <!-- A2 -->
-                        <th data-key="exercise_gender.html" class="A2 vocabulary" colspan="1">Genre des noms</th>
+                        <th data-key="exercise_gender.html" class="A2 vocabulary" colspan="1">genre des noms</th>
                         <th data-key="exercise_avoir_etre.html" class="A2 conjugations-plus" colspan="1">Avoir ou Être
                         </th>
-                        <th data-key="exercise_adjectives.html" class="A2 vocabulary" colspan="1">adjectif</th>
+                        <th data-key="exercise_adjectives.html" class="A2 vocabulary" colspan="1">place de l’adjectif
+                        </th>
+                        <th data-key="exercise_adjective_gender.html" class="A2 vocabulary" colspan="1">genre des
+                            adjectifs</th>
                         <th data-key="exercise_il_est.html" class="A2 vocabulary" colspan="1">Il&nbsp;est ou C'est</th>
                         <th data-key="exercise_mien_sien.html" class="A2 others" colspan="1">Mien Sien</th>
                         <th data-key="exercise_imperfect.html conjugations.html?L%27imparfait" class="A2 conjugations"
@@ -201,6 +204,7 @@
                         <th class="A2 vocabulary"><a href="vocabulary/exercise_gender.html">texte</a></th>
                         <th class="A2 conjugations-plus"><a href="exercise_avoir_etre.html">texte</a></th>
                         <th class="A2 vocabulary"><a href="vocabulary/exercise_adjectives.html">texte</a></th>
+                        <th class="A2 vocabulary"><a href="vocabulary/exercise_adjective_gender.html">texte</a></th>
                         <th class="A2 vocabulary"><a href="vocabulary/exercise_il_est.html">texte</a></th>
                         <th class="A2 others"><a href="exercise_mien_sien.html">texte</a></th>
                         <!-- imparfait -->
@@ -308,6 +312,7 @@
                             <td class="A2 vocabulary" data-key="exercise_gender.html"></td>
                             <td class="A2 conjugations-plus" data-key="exercise_avoir_etre.html"></td>
                             <td class="A2 vocabulary" data-key="exercise_adjectives.html"></td>
+                            <td class="A2 vocabulary" data-key="exercise_adjective_gender.html"></td>
                             <td class="A2 vocabulary" data-key="exercise_il_est.html"></td>
                             <td class="A2 others" data-key="exercise_mien_sien.html"></td>
 
