fine-tuned Stats page

--- a/french/pages/stats.html
+++ b/french/pages/stats.html
@@ -83,7 +83,8 @@
                     <tr>
                         <th data-key="date" rowspan="3">date</th>
                         <th class="duration" rowspan="3">durée <br /><br />(heure:) min: sec</th>
-                        <th data-key="A1" class="A1 conjugations conjugations-plus others" colspan="11">A1</th>
+                        <th data-key="A1" class="A1 conjugations conjugations-plus others vocabulary" colspan="11">A1
+                        </th>
                         <th data-key="A2" class="A2 conjugations conjugations-plus others tense-sequence vocabulary"
                             colspan="17">A2</th>
                         <th data-key="B1" class="B1 conjugations tense-sequence others vocabulary" colspan="15">B1</th>
