fine-tuned Lui-Leur

--- a/french/pages/exercise_lui_leur.html
+++ b/french/pages/exercise_lui_leur.html
@@ -53,8 +53,8 @@
                             </li>
 
                             <li>
-                                <span title="Vous l’arrosez.">Vous arrosez <b>la plante verte</b>.</span>
-                                <span><input type="text" pattern="Vous l’arrosez[.]?"></span>
+                                <span title="Vous l'arrosez.">Vous arrosez <b>la plante verte</b>.</span>
+                                <span><input type="text" pattern="Vous l'arrosez[.]?"></span>
                             </li>
                         </ol>
                     </section>
@@ -83,9 +83,9 @@
                             </li>
 
                             <li>
-                                <span title="Nous le laissons à l’extérieur.">Nous laissons le chien à
+                                <span title="Nous le laissons à l'extérieur.">Nous laissons le chien à
                                     l’extérieur.</span>
-                                <span><input type="text" pattern="Nous le laissons à l’extérieur[.]?"></span>
+                                <span><input type="text" pattern="Nous le laissons à l'extérieur[.]?"></span>
                             </li>
 
                             <li>
@@ -130,8 +130,8 @@
 
                         <ol>
                             <li>
-                                <span title="je les connais">Vous connaissez les enfants de Sarah ?</span>
-                                <span>Oui,&nbsp;<input type="text" pattern="je les connais">.</span>
+                                <span title="nous les connaissons">Vous connaissez les enfants de Sarah ?</span>
+                                <span>Oui,&nbsp;<input type="text" pattern="nous les connaissons">.</span>
                             </li>
 
                             <li>
@@ -150,13 +150,12 @@
                             </li>
 
                             <li>
-                                <span title="elle la lit de temps en temps">Elle lit cette revue chaque semaine ?</span>
-                                <span>Non,&nbsp;<input type="text" pattern="elle la lit de temps en temps"> de temps en
-                                    temps.</span>
+                                <span title="elle la lit">Elle lit cette revue chaque semaine ?</span>
+                                <span>Non,&nbsp;<input type="text" pattern="elle la lit"> de temps en temps.</span>
                             </li>
 
                             <li>
-                                <span title="Paul les emporte chez lui">Paul emporte ses documents chez lui ?</span>
+                                <span title=" Paul les emporte chez lui">Paul emporte ses documents chez lui ?</span>
                                 <span>Oui,&nbsp;<input type="text" pattern="Paul les emporte chez lui">.</span>
                             </li>
 
@@ -171,13 +170,13 @@
                             </li>
 
                             <li>
-                                <span title="je connais">Tu connais le miel de bleuets ?</span>
-                                <span>Oui,&nbsp;<input type="text" pattern="je connais">.</span>
+                                <span title="je le connais">Tu connais le miel de bleuets ?</span>
+                                <span>Oui,&nbsp;<input type="text" pattern="je le connais">.</span>
                             </li>
 
                             <li>
-                                <span title="je n'aime pas ça">Vous aimez le pain de blé ?</span>
-                                <span>Non,&nbsp;<input type="text" pattern="je n'aime pas ça">.</span>
+                                <span title="nous ne l'aimons pas">Vous aimez le pain de blé ?</span>
+                                <span>Non,&nbsp;<input type="text" pattern="nous ne l'aimons pas">.</span>
                             </li>
                         </ol>
                     </section>
@@ -189,8 +188,8 @@
 
                         <ol>
                             <li>
-                                <span title="je lui téléphone le">Tu téléphones à Émilie tous les soirs ?</span>
-                                <span>Non,&nbsp;<input type="text" pattern="je lui téléphone le"> le dimanche.</span>
+                                <span title="je lui téléphone">Tu téléphones à Émilie tous les soirs ?</span>
+                                <span>Non,&nbsp;<input type="text" pattern="je lui téléphone"> le dimanche.</span>
                             </li>
 
                             <li>
@@ -252,8 +251,8 @@
 
                         <ol>
                             <li>
-                                <span title="je la lui envoie">Vous lui envoyez la lettre par la poste ?</span>
-                                <span>Non,&nbsp;<input type="text" pattern="je la lui envoie"> par courriel.</span>
+                                <span title="nous la lui envoyons">Vous lui envoyez la lettre par la poste ?</span>
+                                <span>Non,&nbsp;<input type="text" pattern="nous la lui envoyons"> par courriel.</span>
                             </li>
 
                             <li>
@@ -268,8 +267,7 @@
 
                             <li>
                                 <span title="nous ne le leur donnons pas">Vous donnez l’examen aux étudiants ?</span>
-                                <span>Non,&nbsp;<input type="text" pattern="nous ne le leur donnons pas"> « Bonne Fête
-                                    ».</span>
+                                <span>Non,&nbsp;<input type="text" pattern="nous ne le leur donnons pas">.</span>
                             </li>
 
                             <li>
@@ -283,8 +281,8 @@
                             </li>
 
                             <li>
-                                <span title="je les leur apporte">Vous apportez ces fleurs à vos parents ?</span>
-                                <span>Oui,&nbsp;<input type="text" pattern="je les leur apporte">.</span>
+                                <span title="nous les leur apportons">Vous apportez ces fleurs à vos parents ?</span>
+                                <span>Oui,&nbsp;<input type="text" pattern="nous les leur apportons">.</span>
                             </li>
 
                             <li>
