fine-tuned Stats page

--- a/french/pages/stats.html
+++ b/french/pages/stats.html
@@ -129,7 +129,7 @@
                         <th data-key="exercise_time_prepositions.html" class="A2 others" colspan="1"
                             title="prépositions de temps">prép. de temps</th>
                         <th data-key="exercise_qui_que.html" class="A2 others" colspan="1">Qui ou Que</th>
-                        <th class="A2 others" colspan="1">Lui Leur</th>
+                        <th data-key="exercise_lui_leur.html" class="A2 others" colspan="1">Lui Leur</th>
                         <th class="A2 others" colspan="1" title="négation 1">nég.1</th>
                         <th data-key="exercise_imperative.html conjugations.html?L%27impératif" class="A2 conjugations"
                             colspan="2">impératif</th>
