fine-tuned Adjectives

--- a/french/pages/vocabulary/exercise_adjectives.html
+++ b/french/pages/vocabulary/exercise_adjectives.html
@@ -30,11 +30,12 @@
                 <li>
                     <section class="span-half">
                         <h4>Faites des phrases selon le modèle.</h4>
-                        <div>
-                            Une vieille femme avec des cheveux courts.<br /><br />
-                        </div>
 
                         <ol>
+                            <li>
+                                <span>femme (vieille) cheveux (courts)</span>
+                                <span>Une&nbsp;<i>vieille femme</i>&nbsp;avec des&nbsp;<i>cheveux courts</i>.</span>
+                            </li>
 
                             <li>
                                 <span title="Un gros livre avec une couverture grise.">
@@ -144,7 +145,7 @@
                         <ol>
                             <li>
                                 <span>Cette fille est très jeune.</span>
-                                <span>Oui, c’est une très jeune fille.</span>
+                                <span>Oui, c’est une&nbsp;<i>très jeune fille</i>.</span>
                             </li>
 
                             <li>
@@ -265,19 +266,13 @@
                     <section>
                         <h4>Faites l’exercice selon le modèle.</h4>
 
-                        <div class="example">
-                            <div>
-                                Exemples :
-                            </div>
-                            <div>
-                                <span class="whitespace"></span>Hector (chat, animal / petit, très doux)
-                            </div>
-                            <div>
-                                <span class="whitespace"></span>Hector est un petit chat, mais un animal très doux.
-                            </div>
-                        </div>
-
                         <ol class="input-sentence-width">
+                            <li>
+                                Hector (chat, animal / petit, très doux)
+                                <br />
+                                Hector est un <i>petit chat</i>, mais un <i>animal très doux</i>.
+                            </li>
+
                             <li>
                                 <span title="Tom Cruise est un grand acteur, mais un petit homme.">Tom Cruise (acteur,
                                     homme / grand, petit)</span>
